Ajout des cc et des attachements dans l'envoi d'un devis, création dun évt dans l'historique
plbsi-prod.properties suppose que l'adresse devis@plb.fr est valide

--- a/WebContent/mail/envoiDevis.xhtml
+++ b/WebContent/mail/envoiDevis.xhtml
@@ -21,10 +21,17 @@
 	</ui:define>
 
 	<ui:define name="MailContent">
-		<h:outputText escape="false" value="#{email.body}"/>
-		
+		<h:outputText escape="false" value="#{email.body}"/>	
+	</ui:define>
+	
+	<ui:define name="MailAttachments">
+		<ui:repeat var="_pj" value="#{email.attachments}">
+<m:attachment value="#{_pj.data}" contentType="#{_pj.contentType}"
+			fileName="#{_pj.name}" />		
+		</ui:repeat>
 		
 	</ui:define>
+	
 
 	<ui:define name="MailContentAlternative">
 		
