--- a/WebContent/mz/prospect/visuProspect.xhtml
+++ b/WebContent/mz/prospect/visuProspect.xhtml
@@ -14,7 +14,7 @@
 		<rich:tab header="Statut prospect" name="page1" 
 			onheaderclick="changePage('page1')">
 			<ui:include src="panels/_visuStatutProspect.xhtml" />
-			<ui:include src="panels/_visuNotes.xhtml" />
+<!-- 			<ui:include src="panels/_visuNotes.xhtml" /> -->
 		</rich:tab>
 		<rich:tab header="Fiche Contact" name="page2" 
 			onheaderclick="changePage('page2')">
