--- a/WebContent/mz/prospect/panels/_visuStatutProspect.xhtml
+++ b/WebContent/mz/prospect/panels/_visuStatutProspect.xhtml
@@ -86,8 +86,8 @@
 						<ui:define name="label">
 							<h:outputText value="#{messages['prospect.dateCreation']}" />
 						</ui:define>
-						<h:outputText value="#{editProspectManager.prospect.dateCreation}" /> <h:outputText
-							value="#{editProspectManager.prospect.prospectDetail.rempliPar != null ? '/' + editProspectManager.prospect.prospectDetail.rempliPar : ''}" />
+<!-- 						<h:outputText value="#{editProspectManager.prospect.dateCreation}" /> <h:outputText -->
+<!-- 							value="#{editProspectManager.prospect.prospectDetail.rempliPar != null ? '/' + editProspectManager.prospect.prospectDetail.rempliPar : ''}" /> -->
 					</s:decorate>
 					<s:decorate template="../../layout/display.xhtml">
 						<ui:define name="label">
