--- a/WebContent/mz/prospect/panels/_editIntra.xhtml
+++ b/WebContent/mz/prospect/panels/_editIntra.xhtml
@@ -31,8 +31,7 @@
 						<h:selectOneMenu
 							value="#{editProspectManager.prospect.informationIntra.statutIntra}"
 							style="width:110px; height:20px;">
-							<a:ajax event="change" render="statutIntra"
-								oncomplete="#{rich:component('spinner')}.stop()" />
+							<a:ajax event="change" render="statutIntra"/>
 							<f:selectItem itemValue="#{ST_PROSPECT_RECHERCHE}" />
 							<f:selectItem itemValue="#{ST_PROSPECT_AUDIT}" />
 							<f:selectItem itemValue="#{ST_PROSPECT_COMMERCIAL}" />
